# iftar

./: Cargo.toml  README.md  build.rs  iftar.json
.github/workflows/: build-macos.yml  build_debug_linux.yml  build_debug_macos.yml  build_debug_windows.yml  build_release_linux.yml  build_release_macos.yml  build_release_windows.yml
src/: main.rs
