# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "iftar"
version = "0.2.1"
edition = "2021"
authors = ["omerakgoz34 <omerakgoz34@gmail.com>"]

[profile.release.package."*"]
debug = false
strip = true
opt-level = 3
incremental = false
codegen-units = 1

[profile.release]
debug = false
strip = true
opt-level = 3
incremental = false
codegen-units = 1
lto = true
panic = "abort"

[dependencies]
fltk = { version = "^1.3", features = ["use-ninja", "no-gdiplus", "no-images"]}
minreq = { version = "^2.3", features = ["https-native"] }
scraper = "^0.12"
chrono = "^0.4"
indexmap = "^1.8"
